# zkRamp

./: .gitignore  README.md  pnpm-lock.yaml
contracts/: Cargo.toml  postinstall.sh
contracts/deployments/greeter/: greeter.contract  greeter.json  greeter.wasm
contracts/deployments/zkdex/: alephzero-testnet.ts  zkdex.contract  zkdex.json  zkdex.wasm
contracts/deployments/zkramp/: alephzero-testnet.ts  zkramp.contract  zkramp.json  zkramp.wasm
contracts/scripts/: deploy.ts  script.template.ts
contracts/scripts/utils/: initPolkadotJs.ts
contracts/src/greeter/: Cargo.toml  zkdex.rs
contracts/src/zkdex/: Cargo.toml  zkdex.rs
contracts/src/zkramp/: Cargo.toml  zkramp.rs
frontend/: .env.local.example  .eslintrc.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/encrypt/: route.ts  route.tsx
frontend/src/app/api/prove/: route.ts
frontend/src/app/components/: Footer.tsx  background.tsx  buy-order-modal.tsx  hero-hexagons.tsx  home-top-bar.tsx  liquidity-table.tsx  order-table.tsx  place-order-form.tsx  timer-action.tsx  upload-receipt-modal.tsx
frontend/src/app/liquidity/: page.tsx
frontend/src/app/orders/: page.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  modal.tsx  table.tsx
frontend/src/components/web3/: zkdex-contract-interactions.tsx  zkramp-contract-interactions.tsx
frontend/src/deployments/: deployments.ts
zk/circuits/wise/: package.json  prover.ts  tsconfig.json  wise_send.circom  worker.ts
zk/circuits/wise/contract/: caller.ts  getDeploymentData.ts  initPolkadotJs.ts  secret.ts  zkramp.json  zkramp.wasm
zk/circuits/wise/emls/: oldwise_send.eml
zk/circuits/wise/inputs/: input_wise_send.json
zk/package/: generate_input.ts
zk/package/emls/: wise_send.eml
zk/scripts/: 1_compile.sh  2_gen_wtns.sh  3_gen_zkey_unsafe.sh  5_gen_proof.sh
