[package]
name = "zkramp"
version = "0.0.1"
authors = ["AE Studio<hello@ae.studio>"]
edition = "2021"

[dependencies]
ink = { version = "4.3.0", default-features = false }
ink_prelude = { version = "4.3.0", default-features = false }
openbrush = { version = "4.0.0-beta", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"], optional = true }

[lib]
path = "zkramp.rs"

[features]
default = ["std"]
std = ["ink/std", "scale/std", "scale-info/std", "openbrush/std", "ink_prelude/std"]
ink-as-dependency = []
